--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>PROG23</title>
 </head>
 <body>
-    <h1 class="hej">Test</h1>    
+    <h1 class="hej">Test</h1>
+    <p id="paragraf">Paragraf</p>
+    <p class="text">Paragraf 2</p>
+    
+    <p class="text">A</p>
+    <p class="text">A</p>
+    <a href="https://google.com">Google</a>
 </body>
 </html>
