--- a/Lektion-3/index.html
+++ b/Lektion-3/index.html
@@ -7,6 +7,20 @@
     <title>Lektion 3</title>
 </head>
 <body>
-    <h1>Test</h1>
+    <div class="container">
+        <div></div>
+        <div></div>
+        <div></div>    
+    </div>
+    <div class="container">
+        <div></div>
+        <div></div>
+        <div></div>    
+    </div>
+    <div class="container">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
 </html>
